# zatom

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  pyproject.toml
configs/: eval.yaml  eval_ebm.yaml  eval_fm.yaml  train.yaml  train_ebm.yaml  train_fm.yaml  train_tabasco.yaml
configs/callbacks/: auxiliary_task_finetuning.yaml  default.yaml  default_finetuning.yaml  early_stopping.yaml  ebm_default.yaml  ebm_geom_only.yaml  ebm_mp20_only.yaml  ebm_omol25_only.yaml  ebm_qm9_only.yaml  ebm_qmof150_only.yaml  ema_weight_averaging.yaml  fm_default.yaml  last_model_checkpoint.yaml  learning_rate_monitor.yaml  model_checkpoint.yaml  weight_averaging.yaml
configs/data/: geom_only.yaml  joint.yaml  mp20_only.yaml  omol25_only.yaml  qm9_only.yaml  qmof150_only.yaml
configs/decoder/: ebt.yaml
configs/ebm_module/: ebm.yaml
configs/ecoder/: ebt.yaml  met.yaml  mft.yaml
configs/encoder/: transformer.yaml
configs/experiment/: eval.yaml  example.yaml  example_ebm.yaml  finetune.yaml  overfit.yaml  overfit_tabasco.yaml  train.yaml  train_qm9_mp20_qmof150.yaml  train_qmof150_only.yaml  train_tabasco.yaml
configs/fm_module/: fm.yaml
configs/globals/: globals.yaml
configs/hparams_search/: joint_ebm_optuna.yaml  joint_optuna.yaml
configs/logger/: many_loggers.yaml  wandb.yaml
configs/model/: zatom.yaml  zatom2.yaml
configs/model/architecture/: met_180M.yaml  met_200M.yaml  met_500M.yaml  met_50M.yaml  met_570M.yaml  met_80M.yaml  mfp_180M.yaml  mfp_500M.yaml  mfp_80M.yaml  mft2_180M.yaml  mft2_500M.yaml  mft2_80M.yaml  mft_180M.yaml  mft_200M.yaml  mft_500M.yaml  mft_50M.yaml  mft_570M.yaml  mft_80M.yaml  tfp_160M.yaml  tfp_160M_oct24_divG.yaml  tfp_160M_oct24_divSqrtG.yaml  tfp_160M_tet12_divG.yaml  tfp_160M_tet12_divSqrtG.yaml  tfp_300M.yaml  tfp_300M_oct24_divG.yaml  tfp_300M_oct24_divSqrtG.yaml  tfp_300M_tet12_divG.yaml  tfp_300M_tet12_divSqrtG.yaml  tfp_80M.yaml  tfp_80M_oct24_divG.yaml  tfp_80M_oct24_divSqrtG.yaml  tfp_80M_tet12_divG.yaml  tfp_80M_tet12_divSqrtG.yaml  tfp_default.yaml  tft_160M.yaml  tft_20M.yaml  tft_300M.yaml  tft_5M.yaml  tft_70M.yaml  tft_80M.yaml
configs/net/: met.yaml  mft.yaml
configs/strategy/: ddp.yaml  optimized_ddp.yaml
configs/sweep/: eval_sweep_160M_geom.yaml  eval_sweep_160M_mp20.yaml  eval_sweep_160M_qm9.yaml  eval_sweep_300M_geom.yaml  eval_sweep_300M_mp20.yaml  eval_sweep_300M_qm9.yaml  eval_sweep_geom.yaml  eval_sweep_mp20.yaml  eval_sweep_mp20_only.yaml  eval_sweep_qm9.yaml  eval_sweep_qm9_only.yaml  eval_sweep_template.yaml  eval_sweep_tft_mp20.yaml  eval_sweep_tft_qm9.yaml  finetune_sweep_joint.yaml  finetune_sweep_qm9.yaml  train_sweep_joint.yaml
configs/trainer/: default.yaml
data/geom/: num_nodes_bincount.pt  smiles.pt
data/matbench/: matbench_mp_gap_stats.pkl  num_nodes_bincount.pt  spacegroups_bincount.pt
data/mptrj/: num_nodes_bincount.pt  spacegroups_bincount.pt  stats.pkl
data/omol25/: per_atom_energy_hof_False.pkl
data/qmof/: spacegroups_bincount.pt
forks/flowmm/: CONTRIBUTING.md  README.md
forks/flowmm/scripts_analysis/: dft_create_inputs.py  ehull.py  ehull_correction.py  novelty.py  prerelax.py
forks/flowmm/scripts_model/: evaluate.py  run.py
scripts/: convert_to_traj.py  crystal_validity.csv  group_analyze_csv_metrics.py  molecule_validity.csv  plot_model_scaling_results.py  plot_model_speed_results.py  train_qm9_mp20_qmof150.sh  train_qmof150_only.sh  training_losses.csv  update_model_checkpoint.py
scripts/perlmutter/interactive/: finetune_ddp_tft_joint.sh  finetune_ddp_tft_joint_70M.sh  finetune_ddp_tft_joint_70M_all_props.sh  finetune_ddp_tft_matbench.sh  finetune_ddp_tft_omol25.sh  finetune_ddp_tft_omol25_lower_lr.sh  finetune_ddp_tft_omol25_only.sh  finetune_ddp_tft_qm9.sh  finetune_ddp_tft_qm9_fast.sh  finetune_ddp_tft_qm9_matbench.sh  finetune_ddp_tft_qm9_no_noise.sh  finetune_interactive_tft_wrapper_omol25_only.sh  finetune_interactive_wrapper_joint.sh  finetune_interactive_wrapper_joint_70M.sh  finetune_interactive_wrapper_joint_70M_all_props.sh  finetune_interactive_wrapper_matbench.sh  finetune_interactive_wrapper_omol25.sh  finetune_interactive_wrapper_qm9.sh  finetune_interactive_wrapper_qm9_fast.sh  finetune_interactive_wrapper_qm9_matbench.sh  finetune_interactive_wrapper_qm9_no_noise.sh  interactive_wrapper.sh  interactive_wrapper_joint.sh  interactive_wrapper_joint_160M.sh  interactive_wrapper_joint_20M.sh  interactive_wrapper_joint_300M.sh  (+33 more)
tests/: test_flash_attention.py  test_jvp_attention.py  test_platonic_attention.py  test_platonic_feedfwd.py  test_platonic_io.py  test_platonic_linear.py  test_platonic_positional_encoder.py  test_platonic_transformer.py  test_platonic_transformer_module.py  test_triton_attention.py  transformer_module_platonic_cfg.yaml  unit_tests.py
unit_tests/: shared.py  test_equivariance_platonic_ape.py  test_feedfwd_platonic.py  test_io_platonic.py  test_layer_norm_platonic.py  test_modern_attention_platonic.py  test_platonic_attention.py  test_platonic_feedfwd.py  test_platonic_io.py  test_platonic_norm.py  test_platonic_transformer.py  test_platonic_transformer_module.py  test_positional_encoder_platonic.py  test_transformer_platonic.py  test_transition_platonic.py
zatom/: __init__.py  eval.py  eval_ebm.py  eval_fm.py  train.py  train_ebm.py  train_fm.py
zatom/callbacks/: finetuning.py
zatom/data/: joint_datamodule.py  mnist_datamodule.py
zatom/eval/: crystal.py  crystal_generation.py  crystal_reconstruction.py  mof_generation.py  mof_reconstruction.py  molecule_generation.py  molecule_reconstruction.py
zatom/flow/: interpolants.py  path.py  time_factor.py
zatom/models/: ebm_module.py  fm_module.py  mnist_module.py  zatom.py  zatom2.py
zatom/sampling/: noise_schedule.py
zatom/scheduler/: scheduler.py
zatom/solver/: multimodal_solver.py
zatom/utils/: __init__.py  data_utils.py  instantiators.py  joblib.py  logging_utils.py  metric_utils.py  multimodal.py  packing_utils.py  pylogger.py  rich_utils.py  sampling_utils.py  tensor_utils.py  training_utils.py  utils.py
(+252 files in other folders)
